<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.negociandola.cuponera.DetalleCupon">
    <include android:id="@+id/miActionBar4" layout="@layout/actionbar_cupones"></include>
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:background="@color/colorBlanco"
                android:layout_marginBottom="@dimen/marging_bottom_cards"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="@dimen/heigth_image_card">
                    <ImageView
                        android:id="@+id/imgImagenCupon"
                        android:transitionName="@string/imgImagenCupon"
                        android:src="@drawable/spa"
                        android:scaleType="centerCrop"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/barCanje"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:background="@color/colorPrimary"
                    android:layout_height="50dp">
                    <LinearLayout
                        android:id="@+id/content_folio"
                        android:layout_width="wrap_content"
                        android:orientation="horizontal"
                        android:visibility="gone"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorBlanco"
                            android:id="@+id/tvFolioTitulo"
                            android:textStyle="bold"
                            android:layout_marginRight="@dimen/padding_titulo"
                            android:layout_marginLeft="@dimen/padding_titulo"
                            android:text="@string/fol_cupon"
                            android:textSize="@dimen/tituloSize" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorBlanco"
                            android:id="@+id/tvFolio"
                            android:layout_marginRight="@dimen/padding_titulo"
                            android:layout_marginLeft="@dimen/padding_titulo"
                            android:text="@string/folio"
                            android:textSize="@dimen/tituloSize" />
                    </LinearLayout>
                    <LinearLayout
                        android:visibility="gone"
                        android:id="@+id/content_aprobado"
                        android:layout_width="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/aprobado"
                            android:text="@string/msgAprobado"
                            android:textSize="22sp"
                            android:textStyle="bold"
                            android:gravity="center"
                            android:textColor="@color/colorBlanco"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <TextView
                        android:drawableLeft="@drawable/ic_cupon"
                        android:id="@+id/canjear"
                        android:text="@string/canjear"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textColor="@color/colorBlanco"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>
                <LinearLayout
                    android:visibility="gone"
                    android:id="@+id/btnAprobar"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:background="@color/colorJovenes"
                    android:layout_height="50dp">

                    <TextView
                        android:id="@+id/aprobar"
                        android:text="@string/aprobar"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textColor="@color/colorBlanco"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:background="@color/colorBlanco"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/margin_bottom_text"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:id="@+id/tvPromocionTitulo"
                    android:layout_marginRight="@dimen/padding_titulo"
                    android:layout_marginLeft="@dimen/padding_titulo"
                    android:layout_marginTop="@dimen/padding_titulo"
                    android:text="@string/promocion"
                    android:textSize="@dimen/titulo_detalle_cupon"
                    android:layout_gravity="center_horizontal" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryText"
                    android:id="@+id/tvPromocion"
                    android:textAlignment="center"
                    android:layout_marginBottom="@dimen/padding_titulo"
                    android:paddingBottom="@dimen/padding_titulo"
                    android:layout_marginRight="@dimen/padding_titulo"
                    android:layout_marginLeft="@dimen/padding_titulo"
                    android:layout_marginTop="@dimen/padding_titulo"
                    android:text="@string/texto_restricciones"
                    android:textSize="@dimen/texto_detalle_cupon"
                    android:layout_gravity="center_horizontal" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:background="@color/colorBlanco"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/margin_bottom_text"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:id="@+id/tvRestriccionesTitulo"
                    android:layout_marginRight="@dimen/padding_titulo"
                    android:layout_marginLeft="@dimen/padding_titulo"
                    android:layout_marginTop="@dimen/padding_titulo"
                    android:text="@string/restricciones"
                    android:textSize="@dimen/titulo_detalle_cupon"
                    android:layout_gravity="center_horizontal" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryText"
                    android:id="@+id/tvRestricciones"
                    android:textAlignment="center"
                    android:layout_marginBottom="@dimen/padding_titulo"
                    android:paddingBottom="@dimen/padding_titulo"
                    android:layout_marginRight="@dimen/padding_titulo"
                    android:layout_marginLeft="@dimen/padding_titulo"
                    android:layout_marginTop="@dimen/padding_titulo"
                    android:text="@string/texto_restricciones"
                    android:textSize="@dimen/texto_detalle_cupon"
                    android:layout_gravity="center_horizontal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:background="@color/colorBlanco"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:id="@+id/tvNombreNegocio"
                    android:layout_marginRight="@dimen/padding_titulo"
                    android:layout_marginLeft="@dimen/padding_titulo"
                    android:layout_marginTop="@dimen/padding_titulo"
                    android:text="@string/negocio"
                    android:textSize="@dimen/titulo_detalle_cupon"
                    android:layout_gravity="center_horizontal" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryText"
                    android:id="@+id/tvDescripcionNegocio"
                    android:layout_gravity="start"
                    android:layout_marginBottom="@dimen/padding_titulo"
                    android:layout_marginRight="@dimen/padding_titulo"
                    android:layout_marginLeft="@dimen/padding_titulo"
                    android:layout_marginTop="@dimen/padding_titulo"
                    android:text="@string/descripcion_negocio"
                    android:textSize="@dimen/texto_detalle_cupon"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryText"
                        android:id="@+id/tvTelefonoTitulo"
                        android:layout_gravity="start"
                        android:textStyle="bold"
                        android:layout_marginRight="@dimen/padding_titulo"
                        android:layout_marginLeft="@dimen/padding_titulo"
                        android:layout_marginTop="@dimen/padding_titulo"
                        android:text="@string/telefono_titulo"
                        android:textSize="@dimen/texto_detalle_cupon" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryText"
                        android:id="@+id/tvTelefono"
                        android:layout_gravity="start"
                        android:layout_marginRight="@dimen/padding_titulo"
                        android:layout_marginLeft="@dimen/padding_titulo"
                        android:layout_marginTop="@dimen/padding_titulo"
                        android:text="@string/telefono"
                        android:textSize="@dimen/texto_detalle_cupon" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryText"
                        android:id="@+id/tvHorarioTitulo"
                        android:layout_gravity="start"
                        android:textStyle="bold"
                        android:layout_marginRight="@dimen/padding_titulo"
                        android:layout_marginLeft="@dimen/padding_titulo"
                        android:layout_marginTop="@dimen/padding_titulo"
                        android:text="@string/horario_titulo"
                        android:textSize="@dimen/texto_detalle_cupon" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryText"
                        android:id="@+id/tvHorario"
                        android:layout_gravity="start"
                        android:layout_marginRight="@dimen/padding_titulo"
                        android:layout_marginLeft="@dimen/padding_titulo"
                        android:layout_marginTop="@dimen/padding_titulo"
                        android:text="@string/horario"
                        android:textSize="@dimen/texto_detalle_cupon" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryText"
                        android:id="@+id/tvDireccionTitulo"
                        android:layout_gravity="start"
                        android:textStyle="bold"
                        android:layout_marginRight="@dimen/padding_titulo"
                        android:layout_marginLeft="@dimen/padding_titulo"
                        android:layout_marginTop="@dimen/padding_titulo"
                        android:text="@string/direccion_titulo"
                        android:textSize="@dimen/texto_detalle_cupon" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryText"
                        android:id="@+id/tvDireccion"
                        android:layout_gravity="start"
                        android:layout_marginBottom="@dimen/padding_titulo"
                        android:paddingBottom="@dimen/padding_titulo"
                        android:layout_marginRight="@dimen/padding_titulo"
                        android:layout_marginLeft="@dimen/padding_titulo"
                        android:layout_marginTop="@dimen/padding_titulo"
                        android:text="@string/direccion"
                        android:textSize="@dimen/texto_detalle_cupon" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/footer"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:background="@color/colorPrimaryDark"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlanco"
                    android:id="@+id/tvValidoTitulo"
                    android:textAlignment="center"
                    android:layout_marginRight="@dimen/padding_titulo"
                    android:layout_marginLeft="@dimen/padding_titulo"
                    android:layout_marginTop="@dimen/padding_titulo"
                    android:text="@string/valido"
                    android:textSize="@dimen/texto_detalle_cupon" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlanco"
                    android:id="@+id/tvValido"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_marginBottom="@dimen/padding_titulo"
                    android:layout_marginRight="@dimen/padding_titulo"
                    android:layout_marginLeft="@dimen/padding_titulo"
                    android:layout_marginTop="@dimen/padding_titulo"
                    android:text="@string/valido_fecha"
                    android:textSize="@dimen/texto_detalle_cupon" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
